--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,7 +12,7 @@
 
 <!-- Set the page title inside the pageTitle block -->
 {% block pageTitle %}
-  Hello
+  Prototype kit cookie test
 {% endblock %}
 
 <!-- Breadcrumb goes inside the beforeContent block -->
@@ -28,48 +28,15 @@
       <!-- Change the page title here -->
       <h1>
         NHS.UK prototype kit
-        <span class="nhsuk-caption-xl nhsuk-caption--bottom">Version {{version}}</span>
+        <span class="nhsuk-caption-xl nhsuk-caption--bottom">Cookie test</span>
       </h1>
 
       <!-- Add your content here -->
       <!-- Styles and components can be found at https://beta.nhs.uk/service-manual/styles-components-patterns -->
 
-      <p class="nhsuk-lede-text">
-        This kit lets you rapidly create HTML prototypes of NHS services.
-      </p>
-
-      <hr>
-
-      <h2>
-        About this page
-      </h2>
-
       <p>
-        Use this page as the index for your project.
+        <a href="/examples/passing-data/passing-data-question-name">Test page</a>
       </p>
-      
-      <p>
-        You'll find the code for this page at <strong>/app/views/index.html</strong>.
-      </p>
-
-      <p>
-        There is also an <a href="/page-example">example page</a>, which contains a selection of NHS.UK frontend styles and components.
-      </p>
-
-      <hr>
-
-      <h2>
-        Documentation
-      </h2>
-
-      <ul>
-        <li>
-          Get started with <a href="/docs">how to guides and page templates</a>
-        </li>
-        <li>
-          Copy and paste styles and components from the <a href="https://beta.nhs.uk/service-manual/styles-components-patterns">NHS digital service manual</a>
-        </li>
-      </ul>
 
       <!-- End of content -->
 
